<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2016 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="0.75"
        android:background="@color/white"
        tools:context="com.android.multiwindowplayground.MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduction_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/warning_multiwindow_disabled"
                style="@style/TextWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/content_vertical_dividing_padding"
                android:paddingTop="@dimen/content_vertical_dividing_padding"
                android:text="Enable multi-window mode to see this sample in action!"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_introduction" />

            <Button
                android:id="@+id/button_start_basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStartBasicActivity"
                android:text="@string/start_default" />

            <Button
                android:id="@+id/start_unresizable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStartUnresizableClick"
                android:text="@string/start_unresizable" />

            <Button
                android:id="@+id/start_adjacent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStartAdjacentActivity"
                android:text="@string/start_adjacent" />

            <Button
                android:id="@+id/start_customconfiguration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStartCustomConfigurationActivity"
                android:text="@string/start_custom_activity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/content_vertical_dividing_padding"
                android:text="@string/sample_freeform_introduction" />

            <Button
                android:id="@+id/start_minimumsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStartMinimumSizeActivity"
                android:text="@string/start_minimum" />

            <Button
                android:id="@+id/start_launchbounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStartLaunchBoundsActivity"
                android:text="@string/start_bounds" />

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/multiwindowplayground_logging"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.25" />

</LinearLayout>